# poc-activitypub-model

./: main.py  pyproject.toml  sub.py
src/poc_activitypub_model/: __init__.py  base.py  core.py  utils.py
